@@ -5,8 +5,8 @@ import java.security.KeyPairGenerator;
 import java.security.PrivateKey;
 import java.security.PublicKey;
 import javax.crypto.Cipher;
-import javax.xml.bind.DatatypeConverter;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 public class RSA {
 
@@ -14,34 +14,44 @@ public class RSA {
 	private PrivateKey privateKey;
 	private Cipher cipher;
 
-	public RSA(PublicKey publicKey, PrivateKey privateKey)throws Exception{
+	public RSA(PublicKey publicKey, PrivateKey privateKey) throws Exception{
 		this.publicKey = publicKey;
 		this.privateKey = privateKey;
 		this.cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
 	}
 
-	public RSA(KeyPair keys){
+	public RSA(PublicKey publicKey) throws Exception{
+		this.publicKey = publicKey;
+		this.cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
+	}
+
+	public RSA(KeyPair keys) throws Exception {
 		this.publicKey = keys.getPublic();
 		this.privateKey = keys.getPrivate();
+		this.cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
 	}
 
-	public String encrypt(String text) throws Exception{
-        cipher.init(Cipher.ENCRYPT_MODE, publicKey);
-        byte[] cipherBytes = cipher.doFinal(text.getBytes());
-		return DatatypeConverter.printBase64Binary(cipherBytes);
+	public String encrypt(String plainText) throws Exception{
+		cipher.init(Cipher.ENCRYPT_MODE, publicKey);
+		byte[] textInBytes = Base64.getDecoder().decode(plainText);
+		byte[] cipheredBytes = cipher.doFinal(textInBytes);
+		String cipheredText = Base64.getEncoder().encodeToString(cipheredBytes);
+		return cipheredText;
 	}
 
-	public String decrypt(String text) throws Exception{
+	public String decrypt(String cipheredText) throws Exception{
 		cipher.init(Cipher.DECRYPT_MODE, privateKey);
-		byte[] plainBytes = cipher.doFinal(DatatypeConverter.parseBase64Binary(text));
-		return new String(plainBytes);
+		byte[] cipheredBytes = Base64.getDecoder().decode(cipheredText);
+		byte[] textInBytes = cipher.doFinal(cipheredBytes);
+		String plainText = Base64.getEncoder().encodeToString(textInBytes);
+		return plainText;
 	}
 
-	public static KeyPair generateKeys()throws Exception{
+	public static KeyPair generateKeys() throws Exception{
 		KeyPairGenerator keyGen = KeyPairGenerator.getInstance("RSA");
-    SecureRandom random = SecureRandom.getInstance("SHA1PRNG");
-    keyGen.initialize(2048, random);
-    KeyPair pair = keyGen.generateKeyPair();
-    return pair;
+		SecureRandom random = SecureRandom.getInstance("SHA1PRNG");
+		keyGen.initialize(2048, random);
+		KeyPair pair = keyGen.generateKeyPair();
+		return pair;
 	}
 }
